<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_cliente"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frameRegistraCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layoutRegistraCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ruc_ci"
                    android:textColor="@color/common_google_signin_btn_text_light_default" />

                <EditText
                    android:id="@+id/edit_r_identificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Ingrese Identificación"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/razon_social"
                    android:textColor="@color/common_google_signin_btn_text_light_default" />

                <EditText
                    android:id="@+id/edit_r_razon_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Ingrese Nombre"
                    android:inputType="textPersonName"
                    android:textAllCaps="false" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRegistrarCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.23"
                android:text="@string/registrar"
                android:textColor="@color/ms_blue" />


        </LinearLayout>
    </FrameLayout>


</LinearLayout>