<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:fancy="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/ms_blue"
android:gravity="center_horizontal"
android:orientation="vertical"
android:weightSum="1"
tools:context="com.expriceit.maserven.activities.RecuperarContrasenia">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.97">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:text="@string/app_name"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperar_clave"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail_outline_black_24dp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="Ingrese su correo"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gold" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_vpn_key_black_24dp" />

            <EditText
                android:id="@+id/edtiNuevaClave"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Ingrese Nueva Clave"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/background_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextRegistrar"
            android:layout_width="349dp"
            android:layout_height="42dp"
            android:gravity="bottom|center"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnInicar"
                android:layout_width="286dp"
                android:layout_height="43dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:onClick="ActivRegistrar"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:visibility="visible"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#c1ac0c"
                fancy:fb_focusColor="#dcd20d"
                fancy:fb_fontIconResource="&#xf04b;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/validar"
                fancy:fb_textColor="?android:attr/colorButtonNormal">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:visibility="invisible" />
            </mehdi.sakout.fancybuttons.FancyButton>
        </LinearLayout>


    </LinearLayout>
</ScrollView>

<TextView
    android:id="@+id/textView8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/hecho_por"
    android:textSize="8sp" />

</LinearLayout>
